--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>শব্দ কুইজ + অ্যাডমিন</title>
+<title> বাংলা ভাষার শব্দ … </title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <style>
 body { font-family: "Noto Sans Bengali", sans-serif; background: #f8f9fa; }
@@ -49,11 +49,11 @@ textarea { font-family: monospace; }
 
   <!-- ================= Admin Panel ================= -->
   <div id="adminPanel" class="admin-panel">
-    <h2 class="mb-4">📑 কুইজ ডাটা এডমিন (CRUD + JSON Copy)</h2>
-    <button class="btn btn-danger mb-4" onclick="resetData()">♻️ Reset to Default</button>
+    <h2 class="mb-4">📑</h2>
+    <button class="btn btn-danger mb-4" onclick="resetData()">♻️Default</button>
 
     <!-- Words Section -->
-    <h3>Words (তৎসম / তদ্ভব / অর্ধ-তৎসম / দেশি)</h3>
+    <h3>Words</h3>
     <table class="table table-bordered table-striped" id="wordsTable">
       <thead class="table-dark">
         <tr><th>#</th><th>শব্দ</th><th>ধরন</th><th>অ্যাকশন</th></tr>
@@ -89,11 +89,11 @@ textarea { font-family: monospace; }
 
     <!-- JSON Viewer -->
     <div id="jsonBoxWords" class="jsonBox">
-      <label class="fw-bold mt-3">Words JSON (copy only):</label>
+      <label class="fw-bold mt-3"></label>
       <textarea id="jsonViewWords" class="form-control" rows="10" readonly></textarea>
     </div>
     <div id="jsonBoxOrigin" class="jsonBox">
-      <label class="fw-bold mt-3">Origin Words JSON (copy only):</label>
+      <label class="fw-bold mt-3"></label>
       <textarea id="jsonViewOrigin" class="form-control" rows="10" readonly></textarea>
     </div>
   </div>
