--- a/index.html
+++ b/index.html
@@ -134,7 +134,53 @@ const defaultData = {
 {"text":"টোপর","type":"দেশি"},
 {"text":"ডাব","type":"দেশি"},
 {"text":"ডাগর","type":"দেশি"},
-{"text":"ঢেঁকি","type":"দেশি"}
+{"text":"ঢেঁকি","type":"দেশি"},
+{"text":"তণ্ডুল","type":"তৎসম"},
+{"text":"চাণক্য","type":"তৎসম"},
+{"text":"মাণিক্য","type":"তৎসম"},
+{"text":"ঋণ","type":"তৎসম"},
+{"text":"তৃণ","type":"তৎসম"},
+{"text":"মানুষ","type":"তৎসম"},
+{"text":"পাষাণ","type":"তৎসম"},
+{"text":"দুঃখ","type":"তৎসম"},
+{"text":"নদী","type":"তৎসম"},
+{"text":"চিহ্ন","type":"তৎসম"},
+{"text":"অপরাহ্ণ","type":"তৎসম"},
+{"text":"বধূ","type":"তৎসম"},
+{"text":"চক্ষু","type":"তৎসম"},
+{"text":"বক্ষ","type":"তৎসম"},
+{"text":"শিক্ষা","type":"তৎসম"},
+{"text":"যক্ষ্মা","type":"তৎসম"},
+{"text":"তীক্ষ্ণ","type":"তৎসম"},
+{"text":"প্রভাব","type":"তৎসম"},
+{"text":"পরাজয়","type":"তৎসম"},
+{"text":"অপমান","type":"তৎসম"},
+{"text":"সমৃদ্ধ","type":"তৎসম"},
+{"text":"দুঃস্থ","type":"তৎসম"},
+{"text":"মনঃকষ্ট","type":"তৎসম"},
+{"text":"শিরঃপীড়া","type":"তৎসম"},
+{"text":"কারক","type":"তৎসম"},
+{"text":"শ্রবণ","type":"তৎসম"},
+{"text":"সাহিত্যিক","type":"তৎসম"},
+{"text":"হৈমন্তিক","type":"তৎসম"},
+{"text":"পত্র","type":"তৎসম"},
+{"text":"সোনা","type":"অর্ধ-তৎসম"},
+{"text":"বিষ্টি","type":"অর্ধ-তৎসম"},
+{"text":"সুরুজ","type":"অর্ধ-তৎসম"},
+{"text":"নেমন্তন্ন","type":"অর্ধ-তৎসম"},
+{"text":"পরান","type":"অর্ধ-তৎসম"},
+{"text":"ঝরনা","type":"অর্ধ-তৎসম"},
+{"text":"তারা","type":"অর্ধ-তৎসম"},
+{"text":"জারুল","type":"দেশি"},
+{"text":"ঢোল","type":"দেশি"},
+{"text":"ডোলা","type":"দেশি"},
+{"text":"জলপাই","type":"দেশি"},
+{"text":"পেট (উদর)","type":"দেশি (তামিল)"},
+{"text":"চুলা (উনুন)","type":"দেশি (মুণ্ডারি)"},
+{"text":"কুড়ি (বিশ)","type":"দেশি (কোল)"},
+{"text":"ডিঙ্গি","type":"দেশি"},
+{"text":"ডাল","type":"দেশি"},
+{"text":"চাল","type":"দেশি"}
   ],
   originWords: [
    {"text":"কানুন","language":"আরবি"},
